# bazel_go_hello_world

./: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  main.go  rules_go.bzl
internal_deps/: BUILD.bazel  internal_deps.go  internal_pkg.go
lib/: BUILD.bazel  lib.go
