# BUILD

load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@bazel_gazelle//:def.bzl", "gazelle")

# Gazelle target to update BUILD files
gazelle(name = "gazelle")

# Define the binary target
go_binary(
    name = "my_app",
    srcs = ["main.go"],
    importpath = "github.com/sujay-biradar-25/bazel_go_hello_world",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bwmarrin_snowflake//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
