###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "bazel_go_hello_world",
    version = "1.0.0",
    compatibility_level = 1,
)

# Core dependencies for Bazel 7.4.1
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

# Go dependencies configuration
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bwmarrin_snowflake",
    "com_github_google_uuid",
)

# Configure Go SDK with explicit toolchain registration
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.6")
use_repo(go_sdk, "go_default_sdk")

# Register toolchains explicitly for better compatibility
register_toolchains("@go_default_sdk//:all")
