load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal_deps",
    srcs = ["internal_deps.go"],
    importpath = "github.com/sujay-biradar-25/bazel_go_hello_world/internal_deps",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bwmarrin_snowflake//:snowflake",
        "@com_github_google_uuid//:uuid",
    ],
)
