load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "libs",
    srcs = ["lib.go"],
    importpath = "github.com/sujay-biradar-25/bazel_go_hello_world/libs",
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = ["lib.go"],
    importpath = "github.com/sujay-biradar-25/bazel_go_hello_world/lib",
    visibility = ["//visibility:public"],
    deps = ["//internal_deps"],
)
